--- a/smol-app/smol-app.vcxproj
+++ b/smol-app/smol-app.vcxproj
@@ -40,7 +40,7 @@
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
-    <ConfigurationType>StaticLibrary</ConfigurationType>
+    <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v143</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
@@ -109,11 +109,13 @@
       <PreprocessorDefinitions>SFML_STATIC;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp20</LanguageStandard>
-      <AdditionalIncludeDirectories>$(ProjectDir)src;$(SolutionDir)dependencies\SFML-3.0.0\include;$(solutionDir)dependencies\imgui;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)src/include;$(SolutionDir)dependencies\SFML-3.0.0\include;$(solutionDir)dependencies\imgui;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>opengl32.lib;imgui.lib;sfml-graphics-s-d.lib;sfml-system-s-d.lib;sfml-window-s-d.lib;gdi32.lib;winmm.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)dependencies\SFML-3.0.0\lib_x64\;$(SolutionDir)$(Platform)\$(Configuration)\;</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -125,18 +127,28 @@
       <PreprocessorDefinitions>SFML_STATIC;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp20</LanguageStandard>
-      <AdditionalIncludeDirectories>$(ProjectDir)src;$(SolutionDir)dependencies\SFML-3.0.0\include;$(solutionDir)dependencies\imgui;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)src/include;$(SolutionDir)dependencies\SFML-3.0.0\include;$(solutionDir)dependencies\imgui;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>$(SolutionDir)dependencies\SFML-3.0.0\lib_x64\;$(SolutionDir)$(Platform)\$(Configuration)\;</AdditionalLibraryDirectories>
+      <AdditionalDependencies>opengl32.lib;imgui.lib;sfml-graphics-s.lib;sfml-system-s.lib;sfml-window-s.lib;gdi32.lib;winmm.lib;$(CoreLibraryDependencies);%(AdditionalDependencies)</AdditionalDependencies>
+      <PreventDllBinding>true</PreventDllBinding>
     </Link>
+    <Lib>
+      <AdditionalDependencies>imgui.lib;%(AdditionalDependencies)</AdditionalDependencies>
+    </Lib>
+    <Lib>
+      <AdditionalLibraryDirectories>$(SolutionDir)$(Platform)\$(Configuration)\;</AdditionalLibraryDirectories>
+    </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\Application.cpp" />
     <ClCompile Include="src\Button.cpp" />
+    <ClCompile Include="src\Camera2D.cpp" />
     <ClCompile Include="src\debug_utils\LineShape.cpp" />
     <ClCompile Include="src\Events\CustomEventHandler.cpp" />
     <ClCompile Include="src\ProgramCore.cpp" />
@@ -145,25 +157,26 @@
     <ClCompile Include="src\utils\utils.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\Application.h" />
-    <ClInclude Include="src\Button.h" />
-    <ClInclude Include="src\CollisionStrategy.h" />
-    <ClInclude Include="src\debug_utils\DotShape.h" />
-    <ClInclude Include="src\debug_utils\LineShape.h" />
-    <ClInclude Include="src\debug_utils\Log.h" />
-    <ClInclude Include="src\debug_utils\Profiler.h" />
-    <ClInclude Include="src\EntryPoint.h" />
-    <ClInclude Include="src\Events\CoreEvents.h" />
-    <ClInclude Include="src\Events\CW_CustomEventsList.h" />
-    <ClInclude Include="src\Events\Event.h" />
-    <ClInclude Include="src\Events\CustomEventHandler.h" />
-    <ClInclude Include="src\Events\CW_CustomEvents.h" />
-    <ClInclude Include="src\Layer.h" />
-    <ClInclude Include="src\ProgramCore.h" />
-    <ClInclude Include="src\Renderer.h" />
-    <ClInclude Include="src\Types.h" />
-    <ClInclude Include="src\UPSLimiter.h" />
-    <ClInclude Include="src\utils\utils.h" />
+    <ClInclude Include="src\include\Application.h" />
+    <ClInclude Include="src\include\Button.h" />
+    <ClInclude Include="src\include\Camera2D.h" />
+    <ClInclude Include="src\include\CollisionStrategy.h" />
+    <ClInclude Include="src\include\debug_utils\DotShape.h" />
+    <ClInclude Include="src\include\debug_utils\LineShape.h" />
+    <ClInclude Include="src\include\debug_utils\Log.h" />
+    <ClInclude Include="src\include\debug_utils\Profiler.h" />
+    <ClInclude Include="src\include\EntryPoint.h" />
+    <ClInclude Include="src\include\Events\CoreEvents.h" />
+    <ClInclude Include="src\include\Events\CW_CustomEventsList.h" />
+    <ClInclude Include="src\include\Events\Event.h" />
+    <ClInclude Include="src\include\Events\CustomEventHandler.h" />
+    <ClInclude Include="src\include\Events\CW_CustomEvents.h" />
+    <ClInclude Include="src\include\Layer.h" />
+    <ClInclude Include="src\include\ProgramCore.h" />
+    <ClInclude Include="src\include\Renderer.h" />
+    <ClInclude Include="src\include\Types.h" />
+    <ClInclude Include="src\include\utils\UPSLimiter.h" />
+    <ClInclude Include="src\include\utils\utils.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
